# django_view_to_interface

./: manage.py  pyproject.toml
drffuncserialize/: api.py  asgi.py  error_handler.py  errors.py  exception_handler.py  hello_view.py  interfaces.py  models.py  settings.py  urls.py  view_to_interface.py  wsgi.py
tests/: test_get_customer.py  test_hello.py  test_hello_interface.py
